Import of FALCONE/Dist-Zilla-MintingProfile-RTx-0.02 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-MintingProfile-RTx
gitpan-cpan-version:      0.02
gitpan-cpan-path:         FALCONE/Dist-Zilla-MintingProfile-RTx-0.02.tar.gz
gitpan-cpan-author:       FALCONE
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -2,9 +2,14 @@ NAME
     Dist-Zilla-MintingProfile-RTx - Basic Minting Profile for RTx modules
 
 USAGE
+        dzil setup # it'll use your author and license info
         dzil new -P RTx RT-Extension-DoesMagicStuff
 
     Stubs in a proper Makefile.PL and README
+
+    Your RT extension will still be managed by Module::Install using
+    Module::Install::RTx, but Dist::Zilla provides a nice dist creation
+    interface.
 
 AUTHOR
     Kevin Falcone <falcone@bestpractical.com>
