--- a/README
+++ b/README
@@ -3,7 +3,12 @@ NAME
 
 USAGE
         dzil setup # it'll use your author and license info
+
         dzil new -P RTx RT-Extension-DoesMagicStuff
+
+        # will include a make initdb step in your README
+        # you still need to provide a etc/initialdata file
+        dzil new -P RTx -p db RT-Extension-MagicAndDB
 
     Stubs in a proper Makefile.PL and README
 
