Import of FALCONE/Dist-Zilla-MintingProfile-RTx-0.06 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-MintingProfile-RTx
gitpan-cpan-version:      0.06
gitpan-cpan-path:         FALCONE/Dist-Zilla-MintingProfile-RTx-0.06.tar.gz
gitpan-cpan-author:       FALCONE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.06
+    Stop ignoring README because it makes github prettier
+    Fix the mailto: bug link (and make it the preferred reporting method)
+    Ignore more test cruft
 0.05
     Ignore MYMETA files
     We use GPLv2 by default because it is RT's license
