Import of TSIBLEY/Dist-Zilla-MintingProfile-RTx-0.07 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-MintingProfile-RTx
gitpan-cpan-version:      0.07
gitpan-cpan-path:         TSIBLEY/Dist-Zilla-MintingProfile-RTx-0.07.tar.gz
gitpan-cpan-author:       TSIBLEY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.07
+    Wrap formatting codes around the installation steps
+
 0.06
     Stop ignoring README because it makes github prettier
     Fix the mailto: bug link (and make it the preferred reporting method)
