Import of ALEXMV/Dist-Zilla-MintingProfile-RTx-0.10 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-MintingProfile-RTx
gitpan-cpan-version:      0.10
gitpan-cpan-path:         ALEXMV/Dist-Zilla-MintingProfile-RTx-0.10.tar.gz
gitpan-cpan-author:       ALEXMV
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.10 2014-06-26
+ - Remove mentions of RT 3.8, which is no longer supported
+ - Default to being compat with >= 4.0, < 4.4
+ - Force bugtracking links to not wrap
+ - Omit all_from and readme_from, which Module::Install::RTx 0.34_04 and
+   above include in RTx() by default
+
 0.09 2014-03-13
  - Include a default Changes file
 
