--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.11 2014-06-27
+ - Actually default to 4.0 compat; version 0.10 documented installation
+   steps for 4.0, but the Makefile.PL required 4.2.0 or higher.
+
 0.10 2014-06-26
  - Remove mentions of RT 3.8, which is no longer supported
  - Default to being compat with >= 4.0, < 4.4
